--- a/coc-settings.json
+++ b/coc-settings.json
@@ -6,7 +6,8 @@
     "css",
     "javascript",
     "typescript"
-  ]
+  ],
 
+  // Snippets
+  "snippets.userSnippetsDirectory": "~/.config/nvim/snips"
 }
-
